# server-client

backendcxx/: CMakeLists.txt
backendcxx/include/: GlobalData.h
backendcxx/src/: Server.cpp  main.cpp
examples/: client.c  client.py  server.c  server.py
